{
    "name": "VesselControls",
    "maps": [
        {
            "name": "VesselActions",
            "id": "8ddf02ec-069d-43fa-b81b-ba05bf074f11",
            "actions": [
                {
                    "name": "MovementVector",
                    "type": "PassThrough",
                    "id": "ac573fb3-4530-4394-a853-401cf19a5a08",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2(invertY=false)",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseXY",
                    "type": "PassThrough",
                    "id": "cd2202ad-d27c-46c5-acfb-d039b5504457",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2(x=0.5,y=0.5),InvertVector2(invertX=false)",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MovementUpDownVector",
                    "type": "PassThrough",
                    "id": "3ca436f6-cca2-421f-a978-1dc2469312a2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "84536803-733e-48f2-93f4-7660a077506a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "e1da9822-7d11-45eb-857a-3e57c64acdf1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7958b3ca-de64-4a42-ac3c-0809e42d4494",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "65eb4361-b9d3-42cd-a9ef-f795419541ef",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a61db1f3-3a82-4c27-ba0f-6477f88de5fc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "566fc926-1ed2-427d-9ebd-fc5a96fac6f3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9e5bca99-9c2d-4550-8e49-c9b9b8e33c0d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "6d253f2b-67ba-4b6f-872b-f2ed4d9386a4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementUpDownVector",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "db5ef6af-7912-43f1-9d0f-39cba37b1cbe",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementUpDownVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7d0f77b0-e34d-45fa-a383-6df5514a27a6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementUpDownVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "7e93e60e-e5ed-41de-b37e-d8a1cf5baa25",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseXY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4a6efb19-266f-45c8-84a5-73301d18223e",
                    "path": "<Mouse>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseXY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "823b1be8-80c0-44f8-8d52-6ced052dae89",
                    "path": "<Mouse>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseXY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6ce51929-fc99-4fea-a81f-973bd7c18718",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseXY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a9636214-3467-49dd-9ab4-8b458f99ae56",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseXY",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}